--- a/html/index.html
+++ b/html/index.html
@@ -9,13 +9,33 @@
 </head>
 
 <body>
-  <h1>
-    sepi=>khalse 22224
-  </h1>
+  <nav style="display: flex; justify-content: space-between;">
+    <div>
+      <ul>
+        <li>Home</li>
+        <li>About</li>
+        <li>How it works</li>
+        <li>Prices</li>
+        <li>Help</li>
+      </ul>
+    </div>
+    <div>
+      <img src="logo.png" alt="Deniz and oguz logo" height="40px" />
+    </div>
+    <div>
+      <button>
+        Apple
+      </button>
+      <button>
+        Android
+      </button>
+    </div>
+  </nav>
 
-  <h2>
-    talischi+2
-  </h2>
+  <section>
+
+  </section>
+
 </body>
 
 </html>
