--- a/html/index.html
+++ b/html/index.html
@@ -1,41 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+  <body>
+    <nav style="display: flex; justify-content: space-between">
+      <div>
+        <ul style="list-style: none">
+          <li style="color: black; font-family: system-ui">
+            <a href="https://www.google.com/" target="_blank">Home</a>
+          </li>
+          <li style="color: gray; font-family: system-ui">About</li>
+          <li style="color: gray; font-family: system-ui">How it works</li>
+          <li style="color: gray; font-family: system-ui">Prices</li>
+          <li style="color: gray; font-family: system-ui">Help</li>
+        </ul>
+      </div>
+      <div>
+        <img src="logo.png" alt="Deniz and oguz logo" height="40px" />
+      </div>
+      <div>
+        <button>Apple</button>
+        <button>Android</button>
+      </div>
+    </nav>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-
-<body>
-  <nav style="display: flex; justify-content: space-between;">
-    <div>
-      <ul>
-        <li>Home</li>
-        <li>About</li>
-        <li>How it works</li>
-        <li>Prices</li>
-        <li>Help</li>
-      </ul>
-    </div>
-    <div>
-      <img src="logo.png" alt="Deniz and oguz logo" height="40px" />
-    </div>
-    <div>
-      <button>
-        Apple
-      </button>
-      <button>
-        Android
-      </button>
-    </div>
-  </nav>
-
-  <section>
-
-  </section>
-
-</body>
-
+    <main>
+      <section>
+        <div>
+          <h3>
+            Enjoy the new <br />
+            Smart Ecosystem
+          </h3>
+          <input type="checkbox" />
+          <div style="display: flex; flex-direction: row-reverse">
+            <span>
+              Control appliances thermostats, lights,and other devices remotely
+              using a smortphone or tablet thought on internet connection.
+            </span>
+            <span>
+              Smart home texchnology provides homeowners with convience and cost
+              saving
+            </span>
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
