--- a/html/index.html
+++ b/html/index.html
@@ -1,47 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-  <body>
-    <nav style="display: flex; justify-content: space-between">
-      <div>
-        <ul style="list-style: none">
-          <li style="color: black; font-family: system-ui">
-            <a href="https://www.google.com/" target="_blank">Home</a>
-          </li>
-          <li style="color: gray; font-family: system-ui">About</li>
-          <li style="color: gray; font-family: system-ui">How it works</li>
-          <li style="color: gray; font-family: system-ui">Prices</li>
-          <li style="color: gray; font-family: system-ui">Help</li>
-        </ul>
-      </div>
-      <div>
-        <img src="logo.png" alt="Deniz and oguz logo" height="40px" />
-      </div>
-      <div>
-        <button>Apple</button>
-        <button>Android</button>
-      </div>
-    </nav>
 
-    <main>
-      <section>
-        <div>
-          <h3>
-            Enjoy the new <br />
-            Smart Ecosystem
-          </h3>
-          <input type="checkbox" />
-          <div style="display: flex; flex-direction: row-reverse">
-            <span>
-              Control appliances thermostats, lights,and other devices remotely
-              using a smortphone or tablet thought on internet connection.
-            </span>
-            <span>
-              Smart home texchnology provides homeowners with convience and cost
-              saving
-            </span>
-          </div>
+<style>
+  * {
+    margin: 0;
+    padding: 0;
+  }
+</style>
+
+<body>
+  <nav style="display: flex; justify-content: space-between ;background-color: blue; height:200px">
+    <div>
+      <ul style="list-style: none">
+        <li style="color: black; font-family: system-ui">
+          <a style="color: black; text-decoration: none;" href="https://www.google.com/" target="_blank">Home</a>
+        </li>
+        <li style="color: gray; font-family: system-ui">About</li>
+        <li style="color: gray; font-family: system-ui">How it works</li>
+        <li style="color: gray; font-family: system-ui">Prices</li>
+        <li style="color: gray; font-family: system-ui">Help</li>
+      </ul>
+    </div>
+    <div>
+      <img src="logo.png" alt="Deniz and oguz logo" height="40px" />
+    </div>
+
+    <div>
+      <button
+        style="
+        background-color: white;
+        border-radius:10px;
+        border-width: 1px;
+        border-style: solid;
+        border-color: #c96d6d;">
+         <img src="apple_logo.png" alt="apple" height="12px"/> 
+          apple
+        </button>
+            
+      <button style="border-radius: 10px; background-color: white; border: 1px solid gray; ">Android</button>
+    </div>
+  </nav>
+
+  <main>
+    <section style="background-color: rgb(116, 116, 120); height: 100vh;">
+      <div>
+        <h3>
+          Enjoy the new <br />
+          Smart Ecosystem
+        </h3>
+        <input type="checkbox" />
+        <div style="display: flex; flex-direction: row-reverse">
+          <p style="font-size: 10px ;color: black ;font-family: Arial, Helvetica, sans-serif ;text-decoration: underline;">
+            Control appliances thermostats, lights,and other devices remotely
+            using a smortphone or tablet thought on internet connection.
+          </p>
+          <span>
+            Smart home texchnology provides homeowners with convience and cost
+            saving
+          </span>
         </div>
-      </section>
-    </main>
-  </body>
+      </div>
+    </section>
+  </main>
+</body>
+
 </html>
